--- a/Application/src/main/res/layout/activity_main.xml
+++ b/Application/src/main/res/layout/activity_main.xml
@@ -1,4 +1,8 @@
 <!--
+    DISCLAIMER: This is an Google API which we utilized and modified for our UCLA CS117 Project.
+-->
+
+<!--
   Copyright 2013 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
