--- a/Application/src/main/res/layout/device_name.xml
+++ b/Application/src/main/res/layout/device_name.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    DISCLAIMER: This is an Google API which we utilized and modified for our UCLA CS117 Project.
+-->
+
 <!-- Copyright (C) 2014 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
